# CawbirdX

./: .gitignore  Cargo.toml  README.md  build.rs
.claude/: settings.local.json
src/: app.rs  main.rs
src/api/: client.rs  mod.rs
src/auth/: credentials.rs  mod.rs
src/resources/: resources.gresource.xml  style.css  window.ui
src/state/: store.rs
src/ui/: mod.rs  profile.rs  timeline.rs
