[package]
name = "cawbirdx"
version = "0.1.0"
edition = "2021"
description = "Lightweight GTK4 Twitter client for Linux"
license = "MIT"
repository = "https://github.com/yourusername/cawbirdx"

[dependencies]
gtk4 = "0.7"
libadwaita = "0.5"
glib = "0.18"
gio = "0.18"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1"
futures = "0.3"
once_cell = "1.19"
log = "0.4"
env_logger = "0.11"
keyring = "1.2"
notify-rust = "4.6"
image = "0.24"
gstreamer = "0.20"
gstreamer-video = "0.20"
gstreamer-app = "0.20"
heed = "0.20"
serde_derive = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
url = "2.5"
base64 = "0.21"

[build-dependencies]
glib-build-tools = "0.18"



[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"